--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@next/font": "^14.2.15",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "google-fonts": "^1.0.0",
