--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "google-fonts": "^1.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.1",
     "react": "^19.0.0",
