--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@next/font": "^14.2.15",
+    "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.6.0",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
@@ -23,8 +26,8 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
